--- a/App7_1/app/src/main/res/layout/activity_main.xml
+++ b/App7_1/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/stationlist"/>
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/stationlist"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
